--- a/justListen.html
+++ b/justListen.html
@@ -42,7 +42,7 @@
               </a-plane>
                <a-box color="blue" position="0 3 -22" height="6" width="10" depth="6"></a-box>
                
-               <a-plain color="pink" position="0 3 0" size="20.5,3,0.1"</a-plain>
+               <a-plain color="pink" position="0 3 0" Height="20.5" width="3" depth="0.1"</a-plain>
           </a-scene>
       </body>
   </html>
