--- a/justListen.html
+++ b/justListen.html
@@ -24,7 +24,8 @@
 
             <a-plane
                 color="forestgreen" 
-                width="3" height="3.33" 
+                width="3"
+                height="3.55" 
                 rotation="-90 0 0"
                 position="-3.017 0 -8.361">
             </a-plane>
@@ -33,7 +34,8 @@
             <a-plane 
                 color="darkred" 
                 rotation="-90 0 0" 
-                width="3" height="3.33" 
+                width="3" 
+                height="3.55" 
                 position="-0.010 0 -8.361">
             </a-plane>
 
@@ -41,7 +43,7 @@
             <a-plane 
                 color="yellow" 
                 width="3" 
-                height="3.33" 
+                height="3.55" 
                 rotation="-90 0 0" 
                 position="3 0 -8.361">
             </a-plane>
@@ -49,7 +51,7 @@
 
             <a-box 
                 id="lintelLeft"
-                position="0 2.13661 -10.078" 
+                position="0 2.13661 -10.090" 
                 height="9" 
                 width=".5" 
                 depth="0.1" 
@@ -61,96 +63,93 @@
             <a-box 
                 id="columngrey"
                 color="grey"
-                position="4.008 0.932 -10.078" 
-                height="0.8325" 
-                width="0.8325" 
+                position="4.008 0.932 -10.090" 
+                height="1"
+                width="2" 
                 depth="0.1" 
-                rotation="0 0 90"
+                rotation="0 0 90" 
                 material="" 
-                geometry="" 
-                scale="2.3 1.21 1">
+                geometry="" >
             </a-box>
 
             <a-box 
                 id="columnpurple"
                 color="purple"
-                position="1.491 0.946 -10.082" 
-                height="0.8325" 
-                width="0.8325"
+                position="1.491 0.946 -10.090" 
+                height="2"
+                width="2" 
                 depth="0.1" 
-                rotation="0 0 90"
+                rotation="0 0 90" 
                 material="" 
                 geometry="" 
-                scale="2.3 2.389 1.094">
+                >
             </a-box>
 
             <a-box 
                 id="columnyellow"
                 color="yellow"
-                position="-1.49108 0.94622 -10.08219" 
-                height="0.8325" 
-                width="0.8325" 
+                position="-1.49108 0.94622 -10.090" 
+                height="2"
+                width="2" 
                 depth="0.1" 
-                rotation="0 0 90"
-                material=""
-                geometry="height: 0.833; width: 0.833"
-                scale="2.30046 2.389 1.094">
+                rotation="0 0 90" 
+                material="" 
+                geometry="" 
+                >
             </a-box>
 
             <a-box 
-                id="columnbrown"
-                color="brown"
-                position="-4.008 0.932 -10.078"
-                height="0.8325" 
-                width="0.8325" 
+                id="columndarkblue"
+                color="blue"
+                position="-4.008 0.932 -10.090"
+                height="1"
+                width="2" 
                 depth="0.1" 
-                rotation="0 0 90"
+                rotation="0 0 90" 
                 material="" 
-                geometry="" 
-                scale="2.3 1.21 1">
+                geometry="">
             </a-box>
 
             <a-box
                 id="columnwhite"
                 color="white"
                 position="-4.008 0.932  -6.636" 
-                height="0.8325" 
-                width="0.8325" 
+                height="1"
+                width="2" 
                 depth="0.1" 
                 rotation="0 0 90" 
                 material="" 
-                geometry="height: 0.833; width: 0.833" 
-                scale="2.3 1.21 1">
+                geometry="">
             </a-box>
 
             <a-box 
                 id="columngreen"
                 color="green"
                 position="-1.49108 0.94622 -6.636" 
-                height="0.8325" 
-                width="0.8325" 
+                height="2"
+                width="2" 
                 depth="0.1" 
                 rotation="0 0 90" 
                 material="" 
-                geometry="height: 0.833; width: 0.833" 
-                scale="2.30046 2.389 1.094">
+                geometry="" 
+                >
             </a-box>
 
             <a-box 
                 id="columnpink"
                 color="pink"
                 position="1.491 0.946 -6.636" 
-                height="0.8325" 
-                width="0.8325" 
+                height="2"
+                width="2" 
                 depth="0.1" 
                 rotation="0 0 90" 
                 material="" 
                 geometry="" 
-                scale="2.3 2.389 1.094">
+                >
                 </a-box>
 
             <a-box 
-                id="columnblue"
+                id="columnlightblue"
                 color="lightblue"
                 position="4.008 0.932 -6.636" 
                 height="1"
@@ -169,6 +168,53 @@
                 width=".5" 
                 depth="0.1" 
                 rotation="0 0 90" 
+                material="" 
+                >
+            </a-box>
+
+            <a-box 
+                id="wallback"
+                position="-4.473 0.932 -8.363" 
+                height="3.55"
+                width="2" 
+                depth="0.1" 
+                rotation="0 -89.891 90.000" 
+                material="" 
+               
+                >
+            </a-box>
+
+
+            <a-box 
+                id="lintelbackwall"
+                position="-4.473 2.13661 -8.363" 
+                height="3.55" 
+                width=".5" 
+                depth="0.1"
+                rotation="0 -89.891 90.000 
+                material="" 
+                >
+            </a-box>
+            
+            <a-box 
+                id="wallfront"
+                position="4.473 0.932 -8.363" 
+                height="3.55"
+                width="2" 
+                depth="0.1" 
+                rotation="0 -89.891 90.000" 
+                material=""  
+                >
+            </a-box>
+
+
+            <a-box 
+                id="lintelfrontwall"
+                position="4.473 2.13661 -8.363" 
+                height="3.55" 
+                width=".5" 
+                depth="0.1" 
+                rotation="0 -89.891 90.000" 
                 material="" 
                 >
             </a-box>
