--- a/justListen.html
+++ b/justListen.html
@@ -25,7 +25,7 @@
             <a-plane
                 color="forestgreen" 
                 width="3"
-                height="3.55" 
+                height="10" 
                 rotation="-90 0 0"
                 position="-3.017 0 -8.361">
             </a-plane>
@@ -34,8 +34,8 @@
             <a-plane 
                 color="darkred" 
                 rotation="-90 0 0" 
-                width="3" 
-                height="3.55" 
+                width="3.1" 
+                height="10" 
                 position="-0.010 0 -8.361">
             </a-plane>
 
@@ -43,7 +43,7 @@
             <a-plane 
                 color="yellow" 
                 width="3" 
-                height="3.55" 
+                height="10" 
                 rotation="-90 0 0" 
                 position="3 0 -8.361">
             </a-plane>
@@ -175,7 +175,7 @@
             <a-box 
                 id="wallback"
                 position="-4.473 0.932 -8.363" 
-                height="3.55"
+                height="10"
                 width="2" 
                 depth="0.1" 
                 rotation="0 -89.891 90.000" 
@@ -199,7 +199,7 @@
             <a-box 
                 id="wallfront"
                 position="4.473 0.932 -8.363" 
-                height="3.55"
+                height="10"
                 width="2" 
                 depth="0.1" 
                 rotation="0 -89.891 90.000" 
@@ -218,7 +218,82 @@
                 material="" 
                 >
             </a-box>
-            
+
+            <a-box 
+                id="roompinkleft"
+                color="pink"
+                position="1.491 0.946 -5" 
+                height="3.28"
+                width="2" 
+                depth="0.1" 
+                rotation="0 90 90" 
+                material="" 
+                geometry="" 
+                >
+                </a-box>
+
+               <a-box 
+                   id="roomgreenright"
+                   color="green"
+                   position="-1.551  0.946 -5" 
+                   height="3.28"
+                   width="2" 
+                   depth="0.1" 
+                   rotation="0 90 90" 
+                   material="" 
+                   geometry="" 
+                   >
+                   </a-box>
+
+            <a-box 
+                id="oustiderightwall"
+                color="lightblue"
+                position="0  0.946 -3.38" 
+                height="9"
+                width="2" 
+                depth="0.1" 
+                rotation="0 0 90" 
+                material="" 
+                geometry="" 
+            >
+                </a-box>
+                <a-box 
+                    id="purplewallright"
+                    color="purple"
+                    position="1.491 0.946 -11.72"  
+                    height="3.28"
+                    width="2" 
+                    depth="0.1" 
+                    rotation="0 90 90" 
+                    material="" 
+                    geometry="" 
+                    >
+                </a-box>
+
+                <a-box 
+                    id="yellowwallleft"
+                    color="yellow"
+                    position="-1.551 0.946 -11.72"  
+                    height="3.28"
+                    width="2" 
+                    depth="0.1" 
+                    rotation="0 90 90" 
+                    material="" 
+                    geometry="" 
+                    >
+                      </a-box>
+                    <a-box 
+                        id="oustideleftwall"
+                        color="lightblue"
+                        position="0  0.946 -13.34" 
+                        height="9"
+                        width="2" 
+                        depth="0.1" 
+                        rotation="0 0 90" 
+                        material="" 
+                        geometry="" 
+                    >
+                    </a-box>
         </a-scene>
     </body>
 
