--- a/justListen.html
+++ b/justListen.html
@@ -294,6 +294,32 @@
                         geometry="" 
                     >
                     </a-box>
+
+                   <a-box 
+                       id="purpleroof"
+                       color="purple"
+                       position="0  1.94 -11.78" 
+                       height="9"
+                       width="3.28" 
+                       depth="0.1" 
+                       rotation="90 0 90" 
+                       material="" 
+                       geometry="" 
+                   >
+                   </a-box>
+
+            <a-box 
+                   id="redroof"
+                   color="red"
+                   position="0  1.94 -4.94" 
+                   height="9"
+                   width="3.28" 
+                   depth="0.1" 
+                   rotation="90 0 90" 
+                   material="" 
+                   geometry="" 
+               >
+               </a-box>
         </a-scene>
     </body>
 
