made roof textures
roof textures added

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 
                    <a-box 
                        id="purpleroof"
-                       color="purple"
+                       src="images/ceiling for dtec.jpg"
                        position="0  1.94 -11.78" 
                        height="9"
                        width="3.28" 
@@ -334,7 +334,7 @@
 
             <a-box 
                    id="redroof"
-                   color="red"
+                   src="images/ceiling for dtec.jpg"
                    position="0  1.94 -4.94" 
                    height="9"
                    width="3.28" 
