--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                       src="navmesh.gltf" position="0 0 0" nav-mesh visible="false">
                   </a-gltf-model>    
                 
-            <a-sky color="black" ></a-sky>
+            <a-sky src="images/sky.png" ></a-sky>
 
             <a-plane
                 src="images/srtone floor for dtec.jpg" 
@@ -570,7 +570,7 @@
 
                     <a-box
                          id="yachtybestsong"
-                         src="images/lilyachtysong.png"
+                         src="images/cartisong.png"
                          position="1.400 0.946 -11.72 "   
                          height="1.90"
                          width="2.30"
@@ -583,6 +583,17 @@
                          id="yeatbestsong"
                          src="images/yeatsong.png"
                          position="4.400 0.946 -11.72"   
+                         height="1.90"
+                         width="2.30"
+                         depth="0.1"
+                         rotation="0 90 0"
+                            >   
+                      </a-box>
+
+                    <a-box
+                         id="travisbestsong"
+                         src="images/kanyesong.png"
+                         position="-1.700 0.946 -11.72 "   
                          height="1.90"
                          width="2.30"
                          depth="0.1"
