--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Just Listen</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="style.css" rel="stylesheet" type="text/css"/>
 </head>
 
 <body>
-  <a class="playBtn" href="justlisten.html">PLAY</a>
+  <a
+    class="playBtn" 
+     href="justlisten.html">PLAY
+  </a>
 </body>
 
 </html>
